Avoid address clipping - use inline-block.

--- a/source/css/contact.css.sass
+++ b/source/css/contact.css.sass
@@ -6,12 +6,12 @@
     margin: 0 auto 30px 0
 
   address
-    width: 50%
-    float: right
+    width: 48%
     font-style: normal
     display: inline-block
+    vertical-align: top
 
   .contact-form
     width: 50%
     display: inline-block
-    float: left
+    vertical-align: top
